# python-devicedemo

./: .gitignore  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py
devicedemoclient/: client.py  exceptions.py  i18n.py  shell.py  version.py
devicedemoclient/common/: base.py  cliutils.py  httpclient.py  utils.py
devicedemoclient/common/apiclient/: base.py  exceptions.py
devicedemoclient/v1/: baseunit.py
devicedemoclient/v1/api/: client.py  device.py  device_shell.py  httpclient.py  shell.py
tools/: admin_openrc
