[metadata]
name = devicedemoclient
version = 0.0.1
summary = OpenStack device client Demo
description-file = README.md
author = tongfangcloud
author-email = yumaojun@tongfangcloud.com
classifier =
    Environment :: Web Environment
    Intended Audience :: Big Data Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    devicedemoclient

[entry_points]
console_scripts =